# CinderAttractorExplorer

./: CMakeLists.txt  LICENSE  README.md
assets/: shader.frag  shader.vert
blocks/NanoVG/src/: SvgRenderer.cpp  ci_nanovg.cpp  ci_nanovg_gl.cpp
cmake/: FindCinder.cmake
src/: CinderProjectApp.cpp
vc2015/: CinderProject.sln  CinderProject.vcxproj  CinderProject.vcxproj.filters
